fix/Maint-27272:News display on mobile (stream) style is KO (#261)
(cherry picked from commit 0f28786a2b47c0aec73fd26cf8f18209e4ffc993)

--- a/webapp/src/main/webapp/css/news.less
+++ b/webapp/src/main/webapp/css/news.less
@@ -2921,7 +2921,6 @@ i.uiIconBack:hover {
   }
 
   .newsTitle {
-    position: absolute;
     top: 0;
     width: 100%;
   }
